Remove targets and properties related to SP and WAYF
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1949 ab3bd59b-922f-494d-bb5f-6f0a3c29deca